tests/resources/invalid/type/function/unmentioned_exception.mamba
class MyErr isa Exception

def f(x: Int) raise [MyErr] => print "nothing"
def g(x: Int) => f(x)
